<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:background="@color/colorPrimary"

    android:layout_height="fill_parent">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:layout_marginTop="40dp"
        android:padding="20dp" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/signUp"
            android:textColor="@color/white_greyish"
            android:textSize="25sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/user"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:hint="@string/fullName"
            android:inputType="textCapWords"
            android:padding="15dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="16sp"
            android:focusable="true"
            android:focusableInTouchMode="true"/>
        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/white_greyish" />

        <EditText
            android:id="@+id/surname"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/user"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:hint="@string/surname"
            android:inputType="textCapWords"
            android:padding="15dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="16sp" />


        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/white_greyish" />

        <EditText
            android:id="@+id/email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/email"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="15dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="16sp" />


        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/white_greyish" />
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:padding="15dp"
            android:id="@+id/gender_lyt"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="8dp"
                android:id="@+id/img"
                android:layout_alignParentBottom="true"

                android:src="@drawable/gende"/>


        <Spinner
            android:id="@+id/gender"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@+id/img"
            android:background="@android:color/transparent"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:entries="@array/gender"
            android:textSize="16sp" />
        </RelativeLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/white_greyish" />

        <TextView

            android:id="@+id/birthday"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/cal"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"

            android:hint="@string/birthday"
            android:padding="15dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="16sp" />


        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/white_greyish" />

        <EditText
            android:id="@+id/password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/password"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:hint="@string/passowrd"
            android:inputType="textPassword"
            android:padding="15dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="16sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/white_greyish" />

        <EditText
            android:id="@+id/confirmPassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/confirm_password"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:hint="@string/confirmPassword"
            android:inputType="textPassword"
            android:padding="15dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="16sp" />

        <Button
            android:id="@+id/signUpBtn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/loginbutton_selector"
            android:padding="3dp"
            android:text="@string/signUp"
            android:textColor="@color/background_color"
            android:textSize="17sp"
            android:textStyle="bold" />
        <RelativeLayout
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/already_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingLeft="15dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:text="@string/already_user"
                android:textColor="@color/white_greyish"
                android:textSize="15sp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true" />
            <TextView
                android:layout_toRightOf="@+id/already_user"
                android:id="@+id/already_user1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:gravity="center"

                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:text=" Bura"
                android:textColor="@color/background_color"
                android:textSize="15sp" />
            <TextView
                android:layout_toRightOf="@+id/already_user1"
                android:id="@+id/already_user2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:gravity="center"

                android:paddingRight="15dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:text=" daxil olun."
                android:textColor="@color/white"
                android:textSize="15sp" />
        </RelativeLayout>
    </LinearLayout>
</ScrollView>